feat: update doc

--- a/go-plugin/doc/2.6.1dubbo2springcloud.md
+++ b/go-plugin/doc/2.6.1dubbo2springcloud.md
@@ -2,22 +2,15 @@
 
 | 版本号 | 作者 | 备注     | 修订日期  |
 | ------ | ---- | -------- | --------- |
-| 0.1    | [檀少](https://github.com/Tanc010) | 初始版本 | 2022.2.10 |
-| 0.2 | [省善](https://github.com/YIDWang) | 初始版本 | 2022.4.10 |
+| 1.1    | [檀少](https://github.com/Tanc010) | 初始版本 | 2022.2.10 |
+| 1.2 | [省善](https://github.com/YIDWang) | 初始版本 | 2022.4.10 |
 
-<a name="B0LtO"></a>
-### 2.6.1 标准dubbo和spring cloud协议互转实践 —————————— 线上实战篇
+<a name="B1LtO"></a>
+### 3.6.1 标准dubbo和spring cloud协议互转实践 —————————— 线上实战篇
 本小节主要介绍dubbo转spring cloud协议的实现过程，包括协议转换插件的开发、编译和结合 dsr 控制台，模拟线上操作流程。
-<a name="wFy3B"></a>
+<a name="wFy4B"></a>
 #### 转换流程
 ![image.png](./images/dubbo_springcloud_transcoder.jpg)
-- 转换配置：由于dubbo报文无法直接转换成http报文，比如，http的path，method等信息就无法从dubbo报文中得到，或者dubbo的参数应该转成http body参数还是query参数也无法知晓。而这些信息可以从转换配置中得到。本实践demo的转换配置如下：
-![dsr 配置](TODO)
-
-转换配置使用说明：<br />
-1、解析dubbo协议，匹配`<dubbo.method>`为add的转换配置。<br />
-2、根据转换配置构造http请求，请求path为/reservations/add，method为POST，req_mapping 为 dubbo 协议转换模版信息。dubbo的第一个java.lang.Integer类型参数值为http的query参数a,dubbo的第二个java.lang.Integer类型参数值为http的query参数b<br />​<br />
-<a name="AZmez"></a>
 
 #### 设计实现
 我们先展示编写完成后的目录结构
@@ -60,7 +53,7 @@ egress_config.json配置说明如下：
     }
 }
 ```
-参考2.6的步骤完成一个dubbo转spring cloud协议转换插件的开发：
+参考3.6的步骤完成一个dubbo转spring cloud协议转换插件的开发：
 
 - 实现Transcoder接口
 ```go
@@ -80,20 +73,19 @@ func (t *dubbo2http) Accept(ctx context.Context, headers api.HeaderMap, buf api.
 
 //实现TranscodingRequest方法，对dubbo请求报文的headers、buf、trailers做转换，返回springcloud报文的headers、buf、trailers。
 func (t *dubbo2http) TranscodingRequest(ctx context.Context, headers api.HeaderMap, buf api.IoBuffer, trailers api.HeaderMap) (api.HeaderMap, api.IoBuffer, api.HeaderMap, error) {
-
 	log.DefaultContextLogger.Debugf(ctx, "[dubbo2http transcoder] request header %v ,buf %v,", headers, buf)
-	// 1. 验证请求报文是dubbo
+	// 2. 验证请求报文是dubbo
 	sourceHeader, ok := headers.(*dubbo.Frame)
 	if !ok {
 		return nil, nil, nil, fmt.Errorf("[xprotocol][dubbo] decode dubbo header type error")
 	}
 	t.Id = sourceHeader.GetRequestId()
-	// 2. 解析dubbo报文
+	// 3. 解析dubbo报文
 	content, err := DeocdeWorkLoad(headers, buf)
 	if err != nil {
 		return nil, nil, nil, err
 	}
-    //3. 构造springcloud报文
+    //4. 构造springcloud报文
 	reqHeaderImpl, byteData := buildRequestParameter(content, sourceHeader)
 	sourceHeader.Header.CommonHeader.Range(func(key, value string) bool {
 		if key != fasthttp.HeaderContentLength {
@@ -110,8 +102,8 @@ func (t *dubbo2http) TranscodingRequest(ctx context.Context, headers api.HeaderM
 //实现TranscodingResponse方法，对springcloud响应报文的headers、buf、trailers做转换，返回dubbo报文的headers、buf、trailers。
 func (t *dubbo2http) TranscodingResponse(ctx context.Context, headers api.HeaderMap, buf api.IoBuffer, trailers api.HeaderMap) (api.HeaderMap, api.IoBuffer, api.HeaderMap, error) {
 	log.DefaultContextLogger.Debugf(ctx, "[dubbo2http transcoder] response header %v ,buf %v,", headers, buf)
-	//4. 解析springcloud响应报文并转成dubbo报文
-    targetRequest, err := DecodeHttp2Dubbo(headers, buf, t.Id)
+	//5. 解析springcloud响应报文并转成dubbo报文
+    targetRequest, err := DecodeHttp3Dubbo(headers, buf, t.Id)
 	if err != nil {
 		return nil, nil, nil, err
 	}
@@ -127,27 +119,90 @@ func LoadTranscoderFactory(cfg map[string]interface{}) transcoder.Transcoder {
 ```
 <a name="AMYYs"></a>
 
+- 转换配置：由于dubbo报文无法直接转换成http报文，比如，http的path，method等信息就无法从dubbo报文中得到，或者dubbo的参数应该转成http body参数还是query参数也无法知晓。而这些信息可以从转换配置中得到。本实践demo控制台下发的转换配置如下：
+```json
+{
+	"details": [{
+			"unique_id": "echo",
+			"path": "/reservations/echo",
+			"method": "POST",
+			"target_app": "reservation-service",
+			"req_mapping": {
+				"query": [{
+					"type": "java.lang.String",
+					"key": "message"
+				}]
+			}
+		},
+		{
+			"unique_id": "add",
+			"path": "/reservations/add",
+			"method": "POST",
+			"target_app": "reservation-service",
+			"req_mapping": {
+				"query": [{
+						"type": "java.lang.Integer",
+						"key": "a"
+					},
+					{
+						"type": "java.lang.Integer",
+						"key": "b"
+					}
+				]
+			}
+		},
+		{
+			"unique_id": "sub",
+			"path": "/reservations/sub",
+			"method": "POST",
+			"target_app": "reservation-service",
+			"req_mapping": {
+				"body": {
+					"type": "com.alipay.sofa.ms.service.model.SubReq"
+				}
+			}
+		}
+	]
+}
+```
+
+转换配置使用说明：<br />
+1、解析dubbo协议，匹配`<dubbo.method>`为add的转换配置。<br />
+2、根据转换配置构造http请求，请求path为/reservations/add，method为POST，req_mapping 为 dubbo 协议转换模版信息。dubbo的第一个java.lang.Integer类型参数值为http的query参数a,dubbo的第二个java.lang.Integer类型参数值为http的query参数b<br />​<br />
+<a name="AZmez"></a>
+
+
 #### 服务调用
 - 编译插件
 ```shell
-make trans plugin=dubbo2springcloud && make codec plugin=dubbo trans=dubbo2springcloud && make codec plugin=springcloud
+make trans plugin=dubbo2springcloud && make codec plugin=dubbo && make codec plugin=springcloud
+```
+- 插件打包
+```shell
+make pkg-trans plugin=dubbo2springcloud && make pkg-codec plugin=springcloud,dubbo
 ```
 
 - 插件上传</br>
-![dsr 控制台上传]()
+![dsr 控制台上传](./images/upload_transcoder.jpg)
 
 - dubbo-client& http-server docker 准备</br>
 
 - 规则配置</br>
-![规则配置]()
+![规则配置](./images/transfer_rule.jpg)
 
 - 启动 dubbo-client& http-server
 
 - 服务路由推送配置</br>
-![陆游配置]()
+![sub陆游配置](./images/dubbo_sub.jpg)
+![pub陆游配置](./images/http_pub.jpg)
 
 - 调用
 ```shell
-curl -X GET  127.0.0.1:10999/meshtest/dubbo/add?a=1\&b=9
-10
+curl -X GET  128.0.0.1:10999/meshtest/dubbo/add?a=1\&b=9
+11
 ```
+
+### 备注
+- 测试镜像
+[dubbo 镜像]()
+[httpserver 镜像]()
