--- a/go-plugin/doc/2.6.2bolt2springcloud.md
+++ b/go-plugin/doc/2.6.2bolt2springcloud.md
@@ -36,7 +36,7 @@ springcloud 是基于 http 协议扩展的，需要思考 http header中 host、
 ### 服务调试
 #### 前置工程准备
 ##### demo 准备
-bolt 和 springcloud demo 准备,当前使用仓库地址为 [sofastack-mesh-demo](https://github.com/sofastack-guides/sofastack-mesh-demo)
+bolt demo 准备,当前使用仓库地址为 [sofastack-mesh-demo](https://github.com/sofastack-guides/sofastack-mesh-demo)
 修改 sofa-samples-springboot2-endpoint.xml 文件指定传输为 json 格式。
 ``` xml
      <sofa:reference id="echoService" interface="com.alipay.sofa.ms.service.SofaEchoService">
@@ -45,6 +45,9 @@ bolt 和 springcloud demo 准备,当前使用仓库地址为 [sofastack-mesh-dem
         </sofa:binding.bolt>
      </sofa:reference>
 ```
+
+springcloud demo 镜像为： TODO
+
 ##### 插件配置准备
 根据插件开发设计编写插件 egress_config.json、metadata.json ，metadata.json 按照模版填写基础信息即可
 egress_config.json 配置如下：
@@ -60,6 +63,7 @@ egress_config.json 配置如下：
 		"matcher_type": "mulit_matcher",
 		"config": {
 			"name": "bolt2springcloud",
+		    "enable":true,
 			"variables": [{
 				"name": "x-mosn-data-id",
 				"values": [
@@ -163,8 +167,10 @@ make ant
 > ![sidecar 调试](./images/mosn-bolt-debug.jpg)
 
 * demo springcloud 启动
-
-> ![demo springcloud 启动](./images/springcloud-server-debug.png)
+```json
+docker pull yidwang/demo_http_server
+docker run -p 18080:18080 demo_http_server
+```
 
 * springcloud 发布/订阅
 > sh pub_sub.sh
