--- a/go-plugin/doc/2.6.3xml2springcloud.md
+++ b/go-plugin/doc/2.6.3xml2springcloud.md
@@ -106,6 +106,7 @@ egress_config.json 配置如下：
         "matcher_type": "mulit_matcher",
         "config": {
             "name": "xr2springcloud",
+            "enable": true,
             "variables": [
                 {
                     "name": "x-mosn-data-id",
@@ -177,7 +178,7 @@ curl -X POST -d '{"protocolType":"springcloud","serviceName":"http.server@spring
 * 启动 springcloud 服务
 ```shell
 docker pull yidwang/demo_http_server
-docker run -p 18999:18999 demo_http_server
+docker run -p 18080:18080 demo_http_server
 ```
 
 * springcloud 服务发起 pubsub
