feat: update doc

--- a/go-plugin/doc/2.6.1dubbo2springcloud.md
+++ b/go-plugin/doc/2.6.1dubbo2springcloud.md
@@ -204,5 +204,5 @@ curl -X GET  128.0.0.1:10999/meshtest/dubbo/add?a=1\&b=9
 
 ### 备注
 - 测试镜像
-[dubbo 镜像]()
-[httpserver 镜像]()
+[dubbo 镜像](yidwang/dubbo-springcloud:v1.0)
+[httpserver 镜像](yidwang/demo_http_server)
