feat: update doc

--- a/go-plugin/doc/2.6.3xml2springcloud.md
+++ b/go-plugin/doc/2.6.3xml2springcloud.md
@@ -94,7 +94,7 @@ func (t *xr2springcloud) TranscodingResponse(ctx context.Context, headers api.He
 ##### 插件配置准备
 根据插件开发设计编写插件 egress_config.json、metadata.json ，metadata.json 按照模版填写基础信息即可
 egress_config.json 配置如下：
-```json
+```json lines
 {
     "type": "xr2springcloud",
     "go_plugin_config": {
@@ -111,18 +111,9 @@ egress_config.json 配置如下：
                 {
                     "name": "x-mosn-data-id",
                     "values": [
-                        "CIMT000070"                    
+                        "CIMT000070"
                     ],
-                    "config": {
-                        "details": [
-                            {
-                                "unique_id": "echo",
-                                "path": "/xr2springcloud/hello",
-                                "method": "GET",
-                                "target_app": "http.server" 
-                            }
-                        ]
-                    }
+                    "config":"{\"details\":[{\"unique_id\":\"echo\",\"path\":\"/xr2springcloud/echo\",\"method\":\"GET\",\"target_app\":\"http.server\"}]}"
                 }
             ]
         }
@@ -134,6 +125,18 @@ egress_config.json 配置如下：
     "config": {
         "User": "admin"
     }
+}
+```
+```json
+{ // config
+  "details": [
+    {
+      "unique_id": "echo",
+      "path": "/xr2springcloud/hello",
+      "method": "GET",
+      "target_app": "http.server"
+    }
+  ]
 }
 ```
 
