--- a/go-plugin/doc/api/3.config-api.md
+++ b/go-plugin/doc/api/3.config-api.md
@@ -52,5 +52,17 @@ make pkg-filter plugin=auth
 ```
 * 插件上传
 * 查看日志
-![查看日志]()
+```shell
+grep 'get dynamic conf' /home/admin/logs/mosn/default.log
+```
+![查看日志](../images/dynamic_conf_result.jpg)
 
+### 1.3.5 FAQ
+* 配置下发成功
+```go
+	log.DefaultLogger.Infof("[xprotocol] [config] receive dataId:%s value:%s content:%v", dataId, value, ec.content)
+```
+* 配置解析失败
+```go
+    log.DefaultLogger.Errorf("[xprotocol] [config] receive dataId:%s value:%s err:%s", dataId, value, err)
+```
