--- a/go-plugin/doc/2.6.2bolt2springcloud.md
+++ b/go-plugin/doc/2.6.2bolt2springcloud.md
@@ -50,43 +50,50 @@ bolt demo 准备,当前使用仓库地址为 [sofastack-mesh-demo](https://githu
 ##### 插件配置准备
 根据插件开发设计编写插件 egress_config.json、metadata.json ，metadata.json 按照模版填写基础信息即可
 egress_config.json 配置如下：
-```bash
+```json
 {
-	"type": "bolt2springcloud",
-	"go_plugin_config": {
-		"so_path": "./bolt2springcloud.so",
-		"src_protocol": "bolt",
-		"dst_protocol": "springcloud"
-	},
-	"matcher_config": {
-		"matcher_type": "mulit_matcher",
-		"config": {
-			"name": "bolt2springcloud",
-		    "enable":true,
-			"variables": [{
-				"name": "x-mosn-data-id",
-				"values": [
-					"com.alipay.sofa.ms.service.SofaEchoService:1.0" // bolt 注册中的服务名字
-				],
-				"config": {
-					"details": [{
-						"unique_id": "echo",                                 // bolt 函数接口名字
-						"path": "/bolt2springcloud/hello",                   // http path
-						"method": "GET",                                     // http method
-						"target_app": "http.server",                         // http 注册中心名字
-						"class": "com.alipay.sofa.rpc.core.response.SofaResponse" // resp 响应对应的 class
-					}]
-				}
-			}]
-		}
-	},
-	"rule_info": {
-		"upstream_protocol": "springcloud",
-		"description": "hello"
-	},
-	"config": {
-		"User": "admin"
-	}
+    "type": "bolt2springcloud",
+    "go_plugin_config": {
+        "so_path": "./bolt2springcloud.so",
+        "src_protocol": "bolt",
+        "dst_protocol": "springcloud"
+    },
+    "matcher_config": {
+        "matcher_type": "mulit_matcher",
+        "config": {
+            "name": "bolt2springcloud",
+            "enable": true,
+            "variables": [
+                {
+                    "name": "x-mosn-data-id",
+                    "values": [
+                        "com.alipay.sofa.ms.service.SofaEchoService:1.0"
+                    ],
+                    "config":"{\"details\":[{\"unique_id\":\"echo\",\"path\":\"/bolt2springcloud/hello\",\"method\":\"GET\",\"target_app\":\"http.server\",\"class\":\"com.alipay.sofa.rpc.core.response.SofaResponse\"}]}"
+                }
+            ]
+        }
+    },
+    "rule_info": {
+        "upstream_protocol": "springcloud",
+        "description": "hello"
+    },
+    "config": {
+        "User": "admin"
+    }
+}
+```
+```json lines
+{
+  "details": [
+    {
+      "unique_id": "echo",// bolt 函数接口名字
+      "path": "/bolt2springcloud/hello", // http path
+      "method": "GET", // http method
+      "target_app": "http.server", // http 注册中心名字
+      "class": "com.alipay.sofa.rpc.core.response.SofaResponse"// resp 响应对应的 class
+    }
+  ]
 }
 ```
 备注：matcher_config 字段仅本地调试使用。
