--- a/go-plugin/doc/2.6transcoder.md
+++ b/go-plugin/doc/2.6transcoder.md
@@ -65,16 +65,7 @@
 				"values": [
 					"<value>" //变量值 eg: reservation-server
 				],
-				"config": { //当前服务的动态配置
-					"details": [{
-						"unique_id": "<mehtod>", //接口名字，于基于 TCP 的协议 x-mosn-method 取值保持一致，基于 HTTP 则由 <uri>.<method>组成。
-						"path": "<http_path>", // 转为 HTTP 协议，需要的 PATH 路径，默认为 /
-						"method": "<http_method>", // 转为 HTTP 协议，需要的 METHOD 方法，默认为POST，eg：GET/POST。
-						"target_app": "<service>", // 目前地协议的 服务标识。
-						"req_mapping": {}， // 请求转换需要的动态配置，用户自定义。
-						"resp_mapping": {} // 响应转换需要的动态配置，用户自定义
-					}]
-				}
+				"config": "<config>",
 			}]
 		}
 	},
@@ -82,6 +73,17 @@
 		"upstream_protocol": "<upstream_protocol>", //目标协议, 同dst_protocol eg:springcloud
 		"description": "<description>", //插件描述
 	}
+}
+
+{ //当前服务的动态配置
+	"details": [{
+		"unique_id": "<mehtod>", //接口名字，于基于 TCP 的协议 x-mosn-method 取值保持一致，基于 HTTP 则由 <uri>.<method>组成。
+		"path": "<http_path>", // 转为 HTTP 协议，需要的 PATH 路径，默认为 /
+		"method": "<http_method>", // 转为 HTTP 协议，需要的 METHOD 方法，默认为POST，eg：GET/POST。
+		"target_app": "<service>", // 目前地协议的 服务标识。
+		"req_mapping": {}， // 请求转换需要的动态配置，用户自定义。
+		"resp_mapping": {} // 响应转换需要的动态配置，用户自定义
+	}]
 }
 ```
 **配置使用说明**：<br />
