feat: update transfer

--- a/go-plugin/doc/api/3.config-api.md
+++ b/go-plugin/doc/api/3.config-api.md
@@ -39,7 +39,7 @@ func GlobalExtendConfigByContext(ctx context.Context, key string) (string, bool)
 ![全局配置下发](../images/dynamic_conf.jpg)
 
 ### 1.3.3 配置使用
-在拦截器插件 auth 中增加下面两行代码
+在拦截器插件 dynamic_conf 中增加下面两行代码
 ```go
 	conf, ok := config.GlobalExtendConfigByContext(ctx, "config")
 	log.DefaultContextLogger.Infof(ctx, "get dynamic conf:%s ok:%s", conf, ok)
@@ -47,8 +47,8 @@ func GlobalExtendConfigByContext(ctx context.Context, key string) (string, bool)
 ### 1.3.4 实践
 * 插件打包
 ```shell
-make filter plugin=auth
-make pkg-filter plugin=auth
+make filter plugin=dynamic_conf
+make pkg-filter plugin=dynamic_conf
 ```
 * 插件上传
 * 查看日志
