feat: update doc

--- a/go-plugin/doc/2.6.1dubbo2springcloud.md
+++ b/go-plugin/doc/2.6.1dubbo2springcloud.md
@@ -178,16 +178,20 @@ make pkg-trans plugin=dubbo2springcloud && make pkg-codec plugin=springcloud,dub
 - 规则配置</br>
 ![规则配置](./images/transfer_rule.jpg)
 
-- 启动 dubbo-client& http-server
+- 在服务目录中创建 dubbo-client 并配置 sub 规则。
+  ![sub陆游配置](./images/dubbo_sub.jpg)
+- 在服务目录中创建 http-server 并配置 pub 规则。
+  ![pub陆游配置](./images/http_pub.jpg)
 
-- 服务路由推送配置</br>
-![sub陆游配置](./images/dubbo_sub.jpg)
-![pub陆游配置](./images/http_pub.jpg)
-
-- 调用
+- 配置 http-server & dubbo 的 sidecar 注入规则。
+    
+- 在 dubbo 容器中发起调用
 ```shell
-curl -X GET  128.0.0.1:10999/meshtest/dubbo/add?a=1\&b=9
-11
+curl  'localhost:10999/meshtest/dubbo/hello?message=hello'
+```
+- 成功标志
+```shell
+hello
 ```
 
 ### 备注
