feat: update doc (#104)
* feat: update doc & update transfer

--- a/go-plugin/doc/2.6.1dubbo2springcloud.md
+++ b/go-plugin/doc/2.6.1dubbo2springcloud.md
@@ -87,13 +87,6 @@ func (t *dubbo2http) TranscodingRequest(ctx context.Context, headers api.HeaderM
 	}
     //4. 构造springcloud报文
 	reqHeaderImpl, byteData := buildRequestParameter(content, sourceHeader)
-	sourceHeader.Header.CommonHeader.Range(func(key, value string) bool {
-		if key != fasthttp.HeaderContentLength {
-			reqHeaderImpl.Set(key, value)
-		}
-		return true
-	})
-
 	reqHeaderImpl.Set("Content-Type", "application/json")
 	reqHeaders := http.RequestHeader{reqHeaderImpl}
 	return reqHeaders, buffer.NewIoBufferBytes(byteData), nil, nil
@@ -122,47 +115,42 @@ func LoadTranscoderFactory(cfg map[string]interface{}) transcoder.Transcoder {
 - 转换配置：由于dubbo报文无法直接转换成http报文，比如，http的path，method等信息就无法从dubbo报文中得到，或者dubbo的参数应该转成http body参数还是query参数也无法知晓。而这些信息可以从转换配置中得到。本实践demo控制台下发的转换配置如下：
 ```json
 {
-	"details": [{
-			"unique_id": "echo",
-			"path": "/reservations/echo",
-			"method": "POST",
-			"target_app": "reservation-service",
-			"req_mapping": {
-				"query": [{
-					"type": "java.lang.String",
-					"key": "message"
-				}]
-			}
-		},
-		{
-			"unique_id": "add",
-			"path": "/reservations/add",
-			"method": "POST",
-			"target_app": "reservation-service",
-			"req_mapping": {
-				"query": [{
-						"type": "java.lang.Integer",
-						"key": "a"
-					},
-					{
-						"type": "java.lang.Integer",
-						"key": "b"
-					}
-				]
-			}
-		},
-		{
-			"unique_id": "sub",
-			"path": "/reservations/sub",
-			"method": "POST",
-			"target_app": "reservation-service",
-			"req_mapping": {
-				"body": {
-					"type": "com.alipay.sofa.ms.service.model.SubReq"
-				}
-			}
-		}
-	]
+  "details": [{
+    "unique_id": "echo",
+    "path": "/reservations/echo",
+    "method": "POST",
+    "target_app": "reservation-service",
+    "req_mapping": {
+      "query": [{
+        "type": "java.lang.String",
+        "key": "message"
+      }]
+    }
+  }, {
+    "unique_id": "add",
+    "path": "/reservations/add",
+    "method": "POST",
+    "target_app": "reservation-service",
+    "req_mapping": {
+      "query": [{
+        "type": "java.lang.Integer",
+        "key": "a"
+      }, {
+        "type": "java.lang.Integer",
+        "key": "b"
+      }]
+    }
+  }, {
+    "unique_id": "sub",
+    "path": "/reservations/sub",
+    "method": "POST",
+    "target_app": "reservation-service",
+    "req_mapping": {
+      "body": {
+        "type": "com.alipay.sofa.ms.service.model.SubReq"
+      }
+    }
+  }]
 }
 ```
 
@@ -190,16 +178,20 @@ make pkg-trans plugin=dubbo2springcloud && make pkg-codec plugin=springcloud,dub
 - 规则配置</br>
 ![规则配置](./images/transfer_rule.jpg)
 
-- 启动 dubbo-client& http-server
+- 在服务目录中创建 dubbo-client 并配置 sub 规则。
+  ![sub陆游配置](./images/dubbo_sub.jpg)
+- 在服务目录中创建 http-server 并配置 pub 规则。
+  ![pub陆游配置](./images/http_pub.jpg)
 
-- 服务路由推送配置</br>
-![sub陆游配置](./images/dubbo_sub.jpg)
-![pub陆游配置](./images/http_pub.jpg)
-
-- 调用
+- 配置 http-server & dubbo 的 sidecar 注入规则。
+    
+- 在 dubbo 容器中发起调用
 ```shell
-curl -X GET  128.0.0.1:10999/meshtest/dubbo/add?a=1\&b=9
-11
+curl  'localhost:10999/meshtest/dubbo/hello?message=hello'
+```
+- 成功标志
+```shell
+hello
 ```
 
 ### 备注
