--- a/go-plugin/doc/2.6.3xml2springcloud.md
+++ b/go-plugin/doc/2.6.3xml2springcloud.md
@@ -36,17 +36,11 @@ func (t *xr2springcloud) Accept(ctx context.Context, headers api.HeaderMap, buf 
 
 ```go
 func (t *xr2springcloud) TranscodingRequest(ctx context.Context, headers api.HeaderMap, buf api.IoBuffer, trailers api.HeaderMap) (api.HeaderMap, api.IoBuffer, api.HeaderMap, error) {
-	sourceHeader, ok := headers.(*xr.Request)
+	_, ok := headers.(*xr.Request)
 	if !ok {
 		return nil, nil, nil, fmt.Errorf("[xprotocol][xr] decode xr header type error")
 	}
 	reqHeaderImpl := &fasthttp.RequestHeader{}
-	sourceHeader.Header.Range(func(key, value string) bool {
-		if key != fasthttp.HeaderContentLength {
-			reqHeaderImpl.Set(key, value)
-		}
-		return true
-	})
 	reqHeaderImpl.Set("x-mosn-method", t.config.Method)
 	reqHeaderImpl.Set("x-mosn-path", t.config.Path)
 	reqHeaderImpl.Set("X-TARGET-APP", t.config.TragetApp)
@@ -63,20 +57,12 @@ func (t *xr2springcloud) TranscodingRequest(ctx context.Context, headers api.Hea
 
 ```go
 func (t *xr2springcloud) TranscodingResponse(ctx context.Context, headers api.HeaderMap, buf api.IoBuffer, trailers api.HeaderMap) (api.HeaderMap, api.IoBuffer, api.HeaderMap, error) {
-	sourceHeader, ok := headers.(http.ResponseHeader)
+	_, ok := headers.(http.ResponseHeader)
 	if !ok {
 		return nil, nil, nil, fmt.Errorf("[xprotocol][xr] decode http header type error")
 	}
 	//header
 	xrResponse := xr.Response{}
-	sourceHeader.Range(func(key, value string) bool {
-		//skip for Content-Length,the Content-Length may effect the value decode when transcode more one time
-		if key != "Content-Length" && key != "Accept:" {
-			xrResponse.Set(key, value)
-		}
-		return true
-	})
-
 	payloads := buffer.NewIoBufferBytes(buf.Bytes())
 	respHeader := xr.NewRpcResponse(&xrResponse.Header, payloads)
 	if respHeader == nil {
@@ -94,7 +80,7 @@ func (t *xr2springcloud) TranscodingResponse(ctx context.Context, headers api.He
 ##### 插件配置准备
 根据插件开发设计编写插件 egress_config.json、metadata.json ，metadata.json 按照模版填写基础信息即可
 egress_config.json 配置如下：
-```json
+```json lines
 {
     "type": "xr2springcloud",
     "go_plugin_config": {
@@ -111,18 +97,9 @@ egress_config.json 配置如下：
                 {
                     "name": "x-mosn-data-id",
                     "values": [
-                        "CIMT000070"                    
+                        "CIMT000070"
                     ],
-                    "config": {
-                        "details": [
-                            {
-                                "unique_id": "echo",
-                                "path": "/xr2springcloud/hello",
-                                "method": "GET",
-                                "target_app": "http.server" 
-                            }
-                        ]
-                    }
+                    "config":"{\"details\":[{\"unique_id\":\"echo\",\"path\":\"/xr2springcloud/echo\",\"method\":\"GET\",\"target_app\":\"http.server\"}]}"
                 }
             ]
         }
@@ -134,6 +111,18 @@ egress_config.json 配置如下：
     "config": {
         "User": "admin"
     }
+}
+```
+```json
+{ // config
+  "details": [
+    {
+      "unique_id": "echo",
+      "path": "/xr2springcloud/hello",
+      "method": "GET",
+      "target_app": "http.server"
+    }
+  ]
 }
 ```
 
