--- a/go-plugin/doc/api/3.config-api.md
+++ b/go-plugin/doc/api/3.config-api.md
@@ -10,7 +10,7 @@
 ## 3.1 全局配置 api
 目前提供了两个 API 函数供开发使用，鉴于全局配置众多因此是通过 key:value 保存在 map 中，以 key 为最小纬度管理。
 
-### 3.3.1 api 函数介绍
+### 3.1 api 函数介绍
 * GlobalExtendMapByContext : 从 ctx 中获取全局全部配置 map 对象。
 * GlobalExtendConfigByContext : 通过 ctx 和 key 获取全局配置中的某个 value 数据。 
 
@@ -34,23 +34,40 @@ func GlobalExtendConfigByContext(ctx context.Context, key string) (string, bool)
 }
 ```
 
-### 3.3.2 服务控制台介绍
+### 3.1.2 服务控制台介绍
 * 配置下发
 ![全局配置下发](../images/dynamic_conf.jpg)
 
-### 3.3.3 配置使用
-在拦截器插件 auth 中增加下面两行代码
+### 3.1.3 配置使用
+在拦截器插件 dynamic_conf 中增加下面两行代码
 ```go
 	conf, ok := config.GlobalExtendConfigByContext(ctx, "config")
 	log.DefaultContextLogger.Infof(ctx, "get dynamic conf:%s ok:%s", conf, ok)
 ```
-### 3.3.4 实践
+### 3.1.4 实践
 * 插件打包
 ```shell
-make filter plugin=auth
-make pkg-filter plugin=auth
+make filter plugin=dynamic_conf
+make pkg-filter plugin=dynamic_conf
 ```
 * 插件上传
-* 查看日志
-![查看日志]()
 
+* 发请求(当前绑定的 springcloud 服务)
+```bash
+curl  localhost:10080
+```
+* 查看日志
+```shell
+grep 'get dynamic conf' /home/admin/logs/mosn/default.log
+```
+![查看日志](../images/dynamic_conf_result.jpg)
+
+### 3.1.5 FAQ
+* 配置下发成功
+```go
+	log.DefaultLogger.Infof("[xprotocol] [config] receive dataId:%s value:%s content:%v", dataId, value, ec.content)
+```
+* 配置解析失败
+```go
+    log.DefaultLogger.Errorf("[xprotocol] [config] receive dataId:%s value:%s err:%s", dataId, value, err)
+```
