修改文档格式

--- a/go-plugin/doc/2.7.5route.md
+++ b/go-plugin/doc/2.7.5route.md
@@ -21,47 +21,28 @@
 1. 登录 MS控制台
 1. 在左侧菜单栏选择 **服务网格** > **服务治理**，然后单击 **服务路由 **页签**。**
 1. 单击 **添加服务路由**，然后配置以下参数：
+   
    | **区域** | **参数** | **说明** |
    | --- | --- | --- |
    | **基本信息** | **规则组名称** | 配置路由规则组名称。 |
    |  | **应用** | 配置服务端的应用名称。 |
-   |  | **服务** | 配置应用包含的服务。
-   单击 **切换输入模式** 可在手动填写与下拉选择之间切换。 |
+   |  | **服务** | 配置应用包含的服务。<br>单击 **切换输入模式** 可在手动填写与下拉选择之间切换。 |
    | **规则属性** | **规则名称** | 配置路由规则名称。 |
-   |  | **优先级** | 配置路由的优先级，数字越大优先级越高。
-   同时存在多条路由时，按照路由优先级大小进行匹配。 |
+   |  | **优先级** | 配置路由的优先级，数字越大优先级越高。<br>同时存在多条路由时，按照路由优先级大小进行匹配。 |
    |  | **规则开关** | 配置是否开启该条路由规则。默认开启。 |
-   |  | **分流开关** | 当流量目的地分组没有服务实例时，是否转发到其他分组。
-    - 开启后，流量在高权重分组中未匹配到服务实例，会继续去匹配其他分组。
-    - 关闭后，流量不会匹配其他分组。
+   |  | **分流开关** | 当流量目的地分组没有服务实例时，是否转发到其他分组。<ul><li>开启后，流量在高权重分组中未匹配到服务实例，会继续去匹配其他分组。<li>关闭后，流量不会匹配其他分组。
       |
-      |  | **降级开关** | 当整条规则都匹配不到服务实例时，是否继续匹配其他规则。
-    - 开启后，流量未在当前规则中匹配到服务实例时，会继续去匹配优先级更低的路由规则。
-    - 关闭后，流量不会匹配其他路由规则。
+      |  | **降级开关** | 当整条规则都匹配不到服务实例时，是否继续匹配其他规则。<ul><li>开启后，流量未在当前规则中匹配到服务实例时，会继续去匹配优先级更低的路由规则。<li>关闭后，流量不会匹配其他路由规则。
       |
-      |  | **流量精确匹配**（可选） | 通过流量匹配条件来过滤需要执行路由规则的请求，满足这些条件的流量才会使用这条规则，不满足这条规则的就走降级开关逻辑，往低优先级的路由规则去匹配。不填表示匹配所有流量。
-      多个条件按照顺序执行，直到被某一个规则被拦截或全部通过。规则主要包括下述内容：
-    - **字段**：包括系统字段、请求头、链路。
-    - **字段名**：根据字段类型有不同的值。
-        - 系统字段：包括流量类型、调用方应用名、调用方 IP、服务方应用名。
-        - 请求头：请求头是指协议的请求头，比如 Dubbo 协议取的是 attachment，HTTP 协议取的是 Request Header。用户可以在应用系统中自定义请求头参数和值。
-        - 链路：即 Trace 信息，通过代码里配置文件获取。
-    - **选择逻辑**：包括等于、不等于、属于、不属于、正则。
-    - **字段值**：字段名对应的值。
+      |  | **流量精确匹配**（可选） | 通过流量匹配条件来过滤需要执行路由规则的请求，满足这些条件的流量才会使用这条规则，不满足这条规则的就走降级开关逻辑，往低优先级的路由规则去匹配。不填表示匹配所有流量。<br>多个条件按照顺序执行，直到被某一个规则被拦截或全部通过。规则主要包括下述内容：<ul><li>**字段**：包括系统字段、请求头、链路。<li>**字段名**：根据字段类型有不同的值。<ul><li>系统字段：包括流量类型、调用方应用名、调用方 IP、服务方应用名。 <li>请求头：请求头是指协议的请求头，比如 Dubbo 协议取的是 attachment，HTTP 协议取的是 Request Header。用户可以在应用系统中自定义请求头参数和值。 <li>链路：即 Trace 信息，通过代码里配置文件获取。</ul><li>**选择逻辑**：包括等于、不等于、属于、不属于、正则。<li>**字段值**：字段名对应的值。
       |
-      | **流量目的地** | **权重** | 设置当前流量目的地分组的权重，多个流量目的地的权重之和为 100%。
-      您可以单击最下方的 **添加 **按钮，配置多个流量目的地分组。 |
-      |  | **服务实例分组条件** | 配置服务实例分组条件，多个条件之间是与的关系。
-    - 字段名：可从下拉列表选择，或者自定义输入。
-    - 逻辑：等于。
-    - 字段值：配置字段名对应的值。
-
-您可以单击下方的 **添加 **按钮，配置多个分组条件。 |
+      | **流量目的地** | **权重** | 设置当前流量目的地分组的权重，多个流量目的地的权重之和为 100%。<br>您可以单击最下方的 **添加**按钮，配置多个流量目的地分组。 |
+      |  | **服务实例分组条件** | 配置服务实例分组条件，多个条件之间是与的关系。 <ul><li>字段名：可从下拉列表选择，或者自定义输入。 <li>逻辑：等于。 <li>字段值：配置字段名对应的值。</ul><br>您可以单击下方的 **添加**按钮，配置多个分组条件。 |
 
 4. 单击 **提交**。
 4. 在服务路由列表中，将刚创建的路由规则的状态改为 **开启**。
 
-**注意 **
+**注意**
 您可以添加多条路由规则，相同应用名称的路由规则会被合并。
 #### 编辑路由规则
 您可以随时编辑已创建的路由规则，规则提交后实时生效。
