--- a/go-plugin/doc/2.7.2fusing.md
+++ b/go-plugin/doc/2.7.2fusing.md
@@ -23,41 +23,22 @@
 1. 登录 MS控制台。
 1. 在左侧菜单栏选择 **服务网格** > **服务治理**，然后单击 **服务熔断 **页签**。**
 1. 单击 **添加熔断规则**，然后配置以下参数：
+   
    | **参数** | **说明** |
    | --- | --- |
    | **规则名称** | 配置服务熔断规则的名称。 |
-   | **应用** | 配置检测的目标应用。
-   您可以手动填写或在下拉列表中选择。 |
-   | **熔断方向** | 配置服务熔断的方向，取值如下：
-    - **客户端熔断**：表示熔断规则在客户端生效。在客户端侧统计调用服务端的请求指标，应用填写客户端的应用，服务和方法填写引用的服务端的服务和方法。
-    - **服务端熔断**：表示熔断规则在服务端生效，每个服务端单独统计请求指标，应用填写服务端的应用，服务和方法填写服务端的服务和方法。
+   | **应用** | 配置检测的目标应用。<br>您可以手动填写或在下拉列表中选择。 |
+   | **熔断方向** | 配置服务熔断的方向，取值如下：<ul><li>**客户端熔断**：表示熔断规则在客户端生效。在客户端侧统计调用服务端的请求指标，应用填写客户端的应用，服务和方法填写引用的服务端的服务和方法。<li>**服务端熔断**：表示熔断规则在服务端生效，每个服务端单独统计请求指标，应用填写服务端的应用，服务和方法填写服务端的服务和方法。
       |
       | **熔断服务** | 配置熔断的服务。单击 **切换输入模式** 可在手动填写与下拉选择之间切换。 |
       | **方法** | 配置需要熔断的服务的方法名。 |
-      | **熔断类型** | 配置熔断的类型，取值如下：
-    - **错误比率**：熔断时间窗口内的请求错误率大于错误率阈值时，触发熔断。
-    - **平均 RT**：熔断时间窗口内的请求数阈值大于平均 RT 阈值时，触发熔断。
+      | **熔断类型** | 配置熔断的类型，取值如下：<ul><li>**错误比率**：熔断时间窗口内的请求错误率大于错误率阈值时，触发熔断。<li>**平均 RT**：熔断时间窗口内的请求数阈值大于平均 RT 阈值时，触发熔断。
       |
-      | **运行模式** | 配置熔断的运行模式，取值如下：
-    - **拦截模式**：满足条件的请求会触发熔断规则。
-    - **观察者模式**：熔断规则不会被触发，只会在 MOSN 里打印日志。
+      | **运行模式** | 配置熔断的运行模式，取值如下：<ul><li>**拦截模式**：满足条件的请求会触发熔断规则。<li>**观察者模式**：熔断规则不会被触发，只会在 MOSN 里打印日志。
       |
-      | **熔断配置** | 配置触发熔断的各项参数：
-    - **熔断指标窗口**：和请求数阈值搭配使用，表示熔断指标窗口内至少有请求数阈值的请求就会纳入熔断指标统计。单位为秒。
-    - **请求数阈值**：和熔断指标窗口搭配使用。单位为个。
-    - **错误率阈值**：请求数的平均错误率达到此阈值时触发熔断。熔断类型配置为 **错误比率** 时配置。
-    - **平均 RT 阈值**：请求响应时间超过此阈值时触发熔断。单位为毫秒。熔断类型配置为 **平均 RT** 时配置。
-    - **熔断时间段**：触发熔断后的熔断时长，熔断时长之内的请求会直接返回错误。当熔断超过该时间后会再次尝试调用服务端，如果还是失败则继续触发熔断。
-    - **RPC 超时时间**：经典微服务场景会使用。单位为毫秒。熔断类型配置为 **错误比率** 时配置。
+      | **熔断配置** | 配置触发熔断的各项参数：<ul><li>**熔断指标窗口**：和请求数阈值搭配使用，表示熔断指标窗口内至少有请求数阈值的请求就会纳入熔断指标统计。单位为秒。<li> **请求数阈值**：和熔断指标窗口搭配使用。单位为个。<li>**错误率阈值**：请求数的平均错误率达到此阈值时触发熔断。熔断类型配置为 **错误比率** 时配置。<li>**平均 RT 阈值**：请求响应时间超过此阈值时触发熔断。单位为毫秒。熔断类型配置为 **平均 RT** 时配置。<li>**熔断时间段**：触发熔断后的熔断时长，熔断时长之内的请求会直接返回错误。当熔断超过该时间后会再次尝试调用服务端，如果还是失败则继续触发熔断。<li>**RPC 超时时间**：经典微服务场景会使用。单位为毫秒。熔断类型配置为 **错误比率** 时配置。
       |
-      | **流量精确匹配**（可选） | 配置之后，只有满足匹配条件的流量才会使用这份熔断规则。置空表示匹配所有流量。
-      您可以配置多条匹配条件，多个条件是与的关系，按顺序进行匹配。参数配置如下：
-    - **字段**：可选择系统字段和请求头。
-    - **字段名**：根据字段类型有不同的值。
-        - 系统字段：包括流量类型、调用方应用名、调用方 IP、服务方应用名。
-        - 请求头：请求头是指协议的请求头，比如 Dubbo 协议取的是 attachment，HTTP 协议取的是 Request Header。用户可以在应用系统中自定义请求头参数和值。
-    - **选择逻辑**：包括等于、不等于、属于、不属于、正则。
-    - **字段值**：字段名对应的值。
+      | **流量精确匹配**（可选） | 配置之后，只有满足匹配条件的流量才会使用这份熔断规则。置空表示匹配所有流量。<br>您可以配置多条匹配条件，多个条件是与的关系，按顺序进行匹配。参数配置如下：<ul><li>**字段**：可选择系统字段和请求头。<li>**字段名**：根据字段类型有不同的值。 <ul><li>系统字段：包括流量类型、调用方应用名、调用方 IP、服务方应用名。 <li>请求头：请求头是指协议的请求头，比如 Dubbo 协议取的是 attachment，HTTP 协议取的是 Request Header。用户可以在应用系统中自定义请求头参数和值。</ul><li>**选择逻辑**：包括等于、不等于、属于、不属于、正则。<li>**字段值**：字段名对应的值。
       |
 
 4. 单击 **提交**，然后单击 **确定**。
