--- a/go-plugin/doc/2.7.3downgrade.md
+++ b/go-plugin/doc/2.7.3downgrade.md
@@ -14,14 +14,13 @@
 
 1. 登录 MS控制台。
 1. 在左侧菜单栏选择 **服务网格** > **服务治理**，然后单击 **服务降级 **页签**。**
-1. 单击** 添加降级规则**，然后配置以下参数：
+1. 单击**添加降级规则**，然后配置以下参数：
+   
    | **配置项** | **说明** |
    | --- | --- |
    | **规则名称** | 配置降级规则的名称。 |
    | **调用方应用** | 降级在客户端生效，这里填写或选择客户端应用。 |
-   | **运行模式** | 设置降级规则的运行模式，取值如下：
-    - 拦截模式：降级规则生效。
-    - 观察者模式：降级规则不会生效，只会在 MOSN 中打印日志。
+   | **运行模式** | 设置降级规则的运行模式，取值如下：<ul><li>拦截模式：降级规则生效。<li>观察者模式：降级规则不会生效，只会在 MOSN 中打印日志。
       |
       | **降级服务** | 选择或填写客户端引用的服务端服务名称。星号（*）表示所有服务。 |
       | **降级方法** | 填写待降级的方法名。星号（*）表示所有方法。 |
