--- a/go-plugin/doc/2.7.6fault-isolation.md
+++ b/go-plugin/doc/2.7.6fault-isolation.md
@@ -12,34 +12,20 @@
 
 1. 登录 MS控制台。
 1. 在左侧菜单栏选择 **服务网格** > **服务治理**，然后单击 **服务限流 **页签**。**
-1. 单击** 添加限流规则**，然后配置以下参数：
+1. 单击**添加限流规则**，然后配置以下参数：
+   
    | **参数** | **说明** |
    | --- | --- |
-   | **规则名称** | 配置故障隔离规则的名称。
-   最多支持 255 个字符。 |
+   | **规则名称** | 配置故障隔离规则的名称。<br>最多支持 255 个字符。 |
    | **应用** | 填写客户端应用。 |
-   | **运行模**式 | 配置故障隔离规则的运行方式，取值如下：
-    - **拦截模式**：故障隔离规则生效，有故障的服务器会被暂时隔离。
-    - **监控模式**：有故障的服务器不会被隔离，只打印日志。
+   | **运行模**式 | 配置故障隔离规则的运行方式，取值如下：<ul><li>**拦截模式**：故障隔离规则生效，有故障的服务器会被暂时隔离。<li>**监控模式**：有故障的服务器不会被隔离，只打印日志。
       |
-      | **时间窗口大小** | 设置故障检测的时间，与 **时间窗口内最少调用次数 **配合，只有在指定时间段内进行指定次数的请求才会被采集。
-      取值范围：(1,60]
-      单位：秒 |
-      | **时间窗口内最少调用次数** | 设置指定时间内的最少调用请求次数。
-      取值 ≥ 0。 |
-      | **异常比例阈值（%）** | 设置异常请求的比例，配合 **异常比例倍数** 参数来确定是否隔离目标服务器。
-      当异常请求的比例 ＞ **异常比例阈值 **×** 异常比例倍数 **时，系统认为目标服务器异常，将隔离目标服务器。
-      取值范围：(0,100] |
-      | **异常比例倍数** | 设置异常比例的倍数，配合 **异常比例阈值 **参数来确定是否隔离目标服务器。
-      取值 ≥ 0。 |
-      | **最大隔**离数量 | 设置服务器的隔离数量，即多台服务器故障时最多隔离几台。
-      取值 ≥ 0。 |
-      | **流量精确匹配（可选）** | 符合流量精确匹配的流量才进行隔离。
-      可配置多条匹配规则，各匹配规则之间是与的关系。参数配置如下：
-    - **字段**：选择 **系统字段**。
-    - **字段名**：选择 **服务方应用名**。
-    - **逻辑**：包括 **等于**、**不等于**、**属于**、**不属于**、**正则**。
-    - **字段值**：填入所选字段的值。
+      | **时间窗口大小** | 设置故障检测的时间，与 **时间窗口内最少调用次数**配合，只有在指定时间段内进行指定次数的请求才会被采集。<br>取值范围：(1,60]<br>单位：秒 |
+      | **时间窗口内最少调用次数** | 设置指定时间内的最少调用请求次数。<br>取值 ≥ 0。 |
+      | **异常比例阈值（%）** | 设置异常请求的比例，配合**异常比例倍数**参数来确定是否隔离目标服务器。<br> 当异常请求的比例 ＞ **异常比例阈值**×**异常比例倍数**时，系统认为目标服务器异常，将隔离目标服务器。<br>取值范围：(0,100] |
+      | **异常比例倍数** | 设置异常比例的倍数，配合**异常比例阈值**参数来确定是否隔离目标服务器。<br>取值 ≥ 0。 |
+      | **最大隔**离数量 | 设置服务器的隔离数量，即多台服务器故障时最多隔离几台。<br> 取值 ≥ 0。 |
+      | **流量精确匹配（可选）** | 符合流量精确匹配的流量才进行隔离。<br>可配置多条匹配规则，各匹配规则之间是与的关系。参数配置如下：<ul><li>**字段**：选择 **系统字段**。<li>**字段名**：选择 **服务方应用名**。<li>**逻辑**：包括 **等于**、**不等于**、**属于**、**不属于**、**正则**。<li>**字段值**：填入所选字段的值。
       |
 
 4. 单击 **提交**，然后单击 **确定**。
