修改文档格式

--- a/go-plugin/doc/2.7.7governance-key.md
+++ b/go-plugin/doc/2.7.7governance-key.md
@@ -8,13 +8,12 @@
 ## 2.7.7 故障隔离
 服务治理资源key是服务治理相关功能依赖的关键字段，也是sidecar的系统字段，这写字段对于自定义协议显的尤为重要。以下罗列了服务治理资源key：
 
-| **key ** | **含义** | **作用** |
+| **key** | **含义** | **作用** |
 | --- | --- | --- |
 | x-mosn-data-id | 服务标识 | 服务治理中关联某个具体的服务 |
 | x-mosn-traffic-type | 压测标志 | 服务治理中区分流量类型（测试流量/正式流量） |
 | x-mosn-caller-ip | 调用端IP | 服务治理根据调用端IP精准匹配流量 |
 | x-mosn-target-ip | 服务端IP |
-|
 | x-mosn-caller-app | 调用端应用名 | 服务治理根据调用端应用名精准匹配流量 |
 | x-mosn-target-app | 服务端应用名 | 服务治理根据服务端应用名精准匹配流量 |
 | x-mosn-method | 请求函数名字 | 服务治理中关联某个服务下具体的方法 |
@@ -55,13 +54,12 @@
 }
 
 ```
-这里声明了包括x-mosn-data-id、-mosn-method、x-mosn-caller-app、x-mosn-target-app的服务治理资源key。
+这里声明了包括x-mosn-data-id、x-mosn-method、x-mosn-caller-app、x-mosn-target-app的服务治理资源key。
 ### 服务治理拆分
 #### 服务限流相关的资源key
 | key | 功能 |
 | --- | --- |
-| x-mosn-method | 控制面资源中会拼接
-（{x-mosn-data-id}.{x-mosn-method}） |
+| x-mosn-method | |
 | x-mosn-target-app | 流量精确匹配-系统字段-服务方应用名 |
 | x-mosn-traffic-type | 流量精确匹配-系统字段-流量类型 |
 | x-mosn-caller-app | 流量精确匹配-系统字段-调用方应用名 |
@@ -82,8 +80,7 @@
 #### 服务熔断相关的资源key
 | key | 功能 |
 | --- | --- |
-| x-mosn-method | 控制面资源中会拼接
-（{x-mosn-data-id}.{x-mosn-method}） |
+| x-mosn-method | |
 | x-mosn-target-app | 流量精确匹配-系统字段-服务方应用名 |
 | x-mosn-traffic-type | 流量精确匹配-系统字段-流量类型 |
 | x-mosn-caller-app | 流量精确匹配-系统字段-调用方应用名 |
@@ -100,8 +97,7 @@
 #### 故障注入相关的资源key
 | key | 功能 |
 | --- | --- |
-| x-mosn-method | 控制面资源中会拼接
-（{x-mosn-data-id}.{x-mosn-method}） |
+| x-mosn-method | |
 | x-mosn-target-app | 流量精确匹配-系统字段-服务方应用名 |
 | x-mosn-traffic-type | 流量精确匹配-系统字段-流量类型  |
 | x-mosn-caller-app | 流量精确匹配-系统字段-调用方应用名 |
