添加锚点和链接

--- a/go-plugin/doc/2.7.1ratelimit.md
+++ b/go-plugin/doc/2.7.1ratelimit.md
@@ -4,10 +4,14 @@
 |-----|----------------------------------| -------- |-----------|
 | 0.1 | [檀少](https://github.com/Tanc010) | 初始版本 | 2022.5.10 |
 
-<a name="LjFmL"></a>
+<a name="RLhuA"></a>
+# 2.7 mesh治理能力
+<a name="RLhuB"></a>
 ## 2.7.1 服务限流
 在高并发场景下，为保证在现有资源条件下服务正常运行，使用服务限流让请求和并发在应用可接受的范围内，达到高可用的目的。服务网格的限流通过 MOSN 实现，支持统一的限流模型，对用户透明，并且在产品层增加了 trafficCondition 的流量匹配规则。
+<a name="RLhuC"></a>
 ### 功能简介
+<a name="RLhuD"></a>
 #### 限流原理
 ![](./images/ratelimit-theory.png)
 
@@ -21,6 +25,8 @@
 
 - 您可以添加多条限流规则，若存在服务名和匹配条件相同，但限速不同的限流规则时，生效限速更小的限流规则。
 - 请根据您的实际环境合理配置限速规则，不合理的限速规则可能导致应用访问异常。
+
+<a name="RLhuE"></a>
 #### 添加限流规则
 
 1. 登录 MS控制台。
@@ -44,24 +50,32 @@
 
 4. 单击 **提交**，然后单击 **确定**。
 4. 在限流规则列表中，将刚刚创建的限流规则的状态改为 **开**。
+
+<a name="RLhuF"></a>
 #### 编辑限流规则
 您可以随时编辑已创建的限流规则，编辑规则会在提交后实时生效。
 
 1. 在 **服务限流** 页签，单击目标限流规则右侧的 **编辑**。
 1. 按需求编辑限流规则后，单击 **提交**。
+
+<a name="RLhuG"></a>
 #### 删除限流规则
 您可以删除已创建的限流规则，删除规则的操作会实时生效，请谨慎操作。
 
 1. 在 **服务限流** 页签，单击目标限流规则右侧的 **编辑**。
 1. 单击 **确定**。
 
+<a name="RLhuH"></a>
 ### 2.7.1.1 标准dubbo接入服务限流能力
 
+<a name="RLhuI"></a>
 ### 2.7.1.2 传统xml协议接入服务限流能力
 
+<a name="RLhuJ"></a>
 ### 2.7.1.3 标准springcloud接入服务限流能力
 示例配置：
 ![image.png](./images/ratelimit-config.png)
+<a name="RLhuK"></a>
 #### 服务端限流
 实际配置：
 ![image.png](./images/ratelimit-server-config-1.png)
@@ -74,6 +88,7 @@ kubectl exec -it springcloud-client-train-0 -c mosn-sidecar-container bash
 curl 0:8084/reservations/hi?count=10
 ```
 ![image.png](./images/ratelimit-service-config-caller.png)
+<a name="RLhuL"></a>
 #### 客户端限流
 实际配置
 ![image.png](./images/ratelimit-client-config-1.png)
@@ -86,6 +101,7 @@ kubectl exec -it springcloud-client-train-0 -c mosn-sidecar-container bash
 curl 0:8084/reservations/hi?count=10
 ```
 ![image.png](./images/ratelimt-client-config-caller.png)
+<a name="RLhuM"></a>
 #### 最大并发数限流
 ![image.png](./images/ratelimit-client-config-concurrent.png)
 mosn分辨不出来源请求具体是属于哪一个线程，所以无法做到两个线程里的请求全部通过，第三个线程里的请求全部拒绝，只能是一个估算的值。要想精确限流多少个请求，请使用QPS限流。
