--- a/go-plugin/doc/2.7.2fusing.md
+++ b/go-plugin/doc/2.7.2fusing.md
@@ -4,9 +4,10 @@
 |-----|----------------------------------| -------- |-----------|
 | 0.1 | [檀少](https://github.com/Tanc010) | 初始版本 | 2022.5.10 |
 
-<a name="LjFmL"></a>
+<a name="FShuA"></a>
 ## 2.7.2 服务熔断
 当服务中的服务端接口不稳定，出现频繁超时或错误时，可能会引起服务调用雪崩。您可以对应用开启服务熔断功能，使有故障的服务端及时返回错误，并释放系统资源，提高用户体验和系统性能。
+<a name="FShuB"></a>
 ### 功能简介
 您可以通过下述操作让故障处于可控范围：
 
@@ -18,6 +19,7 @@
 1. 通过微服务管控台 MS 下发熔断的动态配置到分布式配置中心 DRM。
 1. DRM 将熔断的动态配置下发到 MOSN。
 1. MOSN 根据平均 RT 和错误率触发熔断。熔断可在客户端或服务端生效。
+<a name="FShuC"></a>
 #### 创建熔断规则
 
 1. 登录 MS控制台。
@@ -38,18 +40,25 @@
 
 4. 单击 **提交**，然后单击 **确定**。
 4. 在熔断规则列表中，将刚刚创建的熔断规则的状态改为 **开启**。
+<a name="FShuD"></a>
 #### 编辑熔断规则
 您可以随时编辑已创建的熔断规则，规则提交后会实时生效。
 
 1. 在 **服务熔断** 页签，单击目标应用左侧的加号（+）。
 1. 单击目标熔断规则右侧的 **编辑**。
 1. 按需求编辑熔断规则后，单击 **提交**。
+<a name="FShuE"></a>
 #### 删除熔断规则
 您可以删除已创建的熔断规则，删除操作会实时生效，请谨慎操作。
 
 1. 在 **服务熔断** 页签，单击目标应用左侧的加号（+）。
 1. 单击目标熔断规则右侧的 **删除**。
 1. 单击 **确定**。
+<a name="FShuF"></a>
+### 2.7.2.1 标准dubbo接入服务熔断能力
+<a name="FShuG"></a>
+### 2.7.2.2 传统xml协议接入服务熔断能力
+<a name="FShuH"></a>
 ### 2.7.2.3 标准springcloud接入服务熔断能力
 熔断配置：
 
@@ -60,6 +69,7 @@
 - RPC超时时间：单位毫秒，经典微服务场景会使用
 
 ![image.png](./images/fusing-config.png)
+<a name="FShuI"></a>
 #### 错误比率熔断
 熔断规则配置：
 ![image.png](./images/fusing-server-config-1.png)
@@ -82,6 +92,7 @@ curl 0:8084/reservations/hi?count=10
 ![image.png](./images/fusing-server-config-caller-1.png)
 打开熔断规则后，发现异常服务返回两次异常（500错误）后便发生了熔断，并返回509错误（这个509是mosn返回的，请求并没有到异常的服务）
 ![image.png](./images/fusing-server-config-caller-2.png)
+<a name="FShuJ"></a>
 #### 平均RT熔断
 熔断平均RT规则配置
 ![image.png](./images/fusing-server-config-rt-1.png)
