--- a/go-plugin/doc/2.7.3downgrade.md
+++ b/go-plugin/doc/2.7.3downgrade.md
@@ -4,12 +4,15 @@
 |-----|----------------------------------| -------- |-----------|
 | 0.1 | [檀少](https://github.com/Tanc010) | 初始版本 | 2022.5.10 |
 
-<a name="LjFmL"></a>
+<a name="DGFmA"></a>
 ## 2.7.3 服务降级
 当服务器压力剧增的情况下，根据实际业务情况及流量，对某些不重要的服务，不处理或换种简单的方式处理，从而释放服务器资源以保证核心业务正常运作或高效运作。
+<a name="DGFmB"></a>
 ### 功能简介
+<a name="DGFmC"></a>
 #### 降级原理
 降级在客户端实现，当客户端在调用服务端时及时响应一个降级错误码，不会真正请求到服务端。目前支持服务级降级和方法级降级两种方式。实现流程如下：![](./images/downgrade-theory.png)
+<a name="DGFmD"></a>
 #### 配置服务降级规则
 
 1. 登录 MS控制台。
@@ -26,18 +29,25 @@
 
 4. 单击 **提交**，然后单击 **确定**。
 4. 在降级规则列表中，将刚刚创建的规则状态修改为 **开**。
+<a name="DGFmE"></a>
 #### 编辑服务降级规则
 您可以随时编辑已创建的服务降级规则，规则提交后实时生效。
 
 1. 在 **服务降级** 页签，单击目标应用左侧的加号（+）。
 1. 单击目标服务降级规则右侧的 **编辑**。
 1. 按需求编辑服务降级规则后，单击 **提交**。
+<a name="DGFmF"></a>
 #### 删除服务降级规则
 您可以删除已创建的服务降级规则，删除操作实时生效，请谨慎操作。
 
 1. 在 **服务降级** 页签，单击目标应用左侧的加号（+）。
 1. 单击目标服务降级规则右侧的 **删除**。
 1. 单击 **确定**。
+<a name="DGFmG"></a>
+### 2.7.3.1 标准dubbo接入服务降级能力
+<a name="DGFmH"></a>
+### 2.7.3.2 传统xml协议接入服务降级能力
+<a name="DGFmI"></a>
 ### 2.7.3.3 标准springcloud接入服务降级能力
 降级粒度有三种
 
@@ -46,6 +56,7 @@
 - 方法级降级：对引用服务的某一个方法进行降级：填写具体方法名
 
 ![image.png](./images/downgrade-config.png)
+<a name="DGFmJ"></a>
 #### 降级规则配置
 ![image.png](./images/downgrade-client-config.png)
 降级规则开启后，进入客户端容器，多次调用客户端接口，可以看到所有的请求都被降级处理掉了
