--- a/go-plugin/doc/2.7.4fault-inject.md
+++ b/go-plugin/doc/2.7.4fault-inject.md
@@ -4,10 +4,12 @@
 |-----|----------------------------------| -------- |-----------|
 | 0.1 | [檀少](https://github.com/Tanc010) | 初始版本 | 2022.5.10 |
 
-<a name="LjFmL"></a>
+<a name="FIFmA"></a>
 ## 2.7.4 故障注入
 您可以通过故障注入功能向测试应用注入故障，检测应用面对异常时的处理情况。您可以根据检测的情况调整您的应用，以减少应用在正式使用时出现的异常问题。多用于测试环境。
+<a name="FIFmB"></a>
 ### 配置说明
+<a name="FIFmC"></a>
 #### 配置故障注入规则
 
 1. 登录 MS控制台。
@@ -28,18 +30,26 @@
 
 4. 单击 **提交**，然后单击 **确定**。
 4. 在故障注入规则列表中，将刚刚创建的故障注入规则的状态改为 **开启**。**说明**当多条故障注入规则针对同一个服务时，只会生效第一条。
+<a name="FIFmD"></a>
 #### 编辑故障注入规则
 您可以随时编辑已创建的故障注入规则，规则提交后实时生效。
 
 1. 在 **故障注入** 页签，单击目标故障注入规则右侧的 **编辑**。
 1. 按需求编辑故障注入规则后，单击 **提交**。
+<a name="FIFmE"></a>
 #### 删除故障注入规则
 您可以删除已创建的故障注入规则，删除操作实时生效，请谨慎操作。
 
 1. 在 **故障注入** 页签，单击目标故障注入规则右侧的 **删除**。
 1. 单击 **确定**。
+<a name="FIFmF"></a>
+### 2.7.4.1 标准dubbo接入服务故障注入能力
+<a name="FIFmG"></a>
+### 2.7.4.2 传统xml协议接入服务故障注入能力
+<a name="FIFmH"></a>
 ### 2.7.4.3 标准springcloud接入故障注入能力
 ![image.png](./images/fault-inject-config.png)
+<a name="FIFmI"></a>
 #### 服务端故障注入
 规则配置
 ![image.png](./images/fault-inject-server-config.png)
@@ -51,6 +61,7 @@ kubectl exec -it springcloud-client-train-0 -c mosn-sidecar-container bash
 curl 0:8084/reservations/hi?count=10
 ```
 ![image.png](./images/fault-inject-server-config-caller.png)
+<a name="FIFmJ"></a>
 #### 客户端故障注入
 客户端注入规则配置
 ![image.png](./images/fault-inject-client-config.png)
