--- a/go-plugin/doc/2.7.5route.md
+++ b/go-plugin/doc/2.7.5route.md
@@ -4,9 +4,10 @@
 |-----|----------------------------------| -------- |-----------|
 | 0.1 | [檀少](https://github.com/Tanc010) | 初始版本 | 2022.5.10 |
 
-<a name="LjFmL"></a>
+<a name="RjFmA"></a>
 ## 2.7.5 服务路由
 当服务消费者面临多个服务提供者时，需要通过路由规则来确定具体的服务提供者。服务路由功能提供了灵活的路由功能，允许您定义多条服务路由规则，可以帮助您解决多个场景下的难题。
+<a name="RjFmB"></a>
 ### 功能简介
 服务路由多用于线下测试连调、蓝绿发布、灰度引流场景，将因版本升级造成的问题影响降到最低。
 
@@ -16,6 +17,7 @@
 
 配置的路由规则实际在服务消费方（即客户端）生效，您可以配置服务路由过滤服务提供方。目前主要有 RPC-Client（经典微服务生效）和 MOSN（服务网格生效）两种执行实体。
 在部署服务提供方时，您可以在机器上加固定格式的标签，比如 LABEL=A。![](./images/route-theory-1.png)路由规则生效流程如下图所示：![](./images/route-theory-2.png)
+<a name="RjFmC"></a>
 #### 添加路由规则
 
 1. 登录 MS控制台
@@ -41,22 +43,26 @@
 
 **注意**
 您可以添加多条路由规则，相同应用名称的路由规则会被合并。
+<a name="RjFmD"></a>
 #### 编辑路由规则
 您可以随时编辑已创建的路由规则，规则提交后实时生效。
 
 1. 在 **服务路由** 页签，单击目标应用左侧的加号（+）。
 1. 单击目标路由规则右侧的 **编辑**。
 1. 按需求编辑路由规则后，单击 **提交**。
+<a name="RjFmE"></a>
 #### 删除路由规则
 您可以删除已创建的路由规则，删除规则会实时生效，请谨慎操作。
 
 1. 在 **服务路由** 页签，单击目标应用左侧的加号（+）。
 1. 单击目标路由规则右侧的 **删除**。
 1. 单击 **确定**。
-### 2.7.5.3 标准springcloud接入服务路由能力
+<a name="RjFmF"></a>
+### 2.7.5.1 标准springcloud接入服务路由能力
 ![image.png](./images/route-config-1.png)
 
 ![image.png](./images/route-config-2.png)
+<a name="RjFmG"></a>
 #### 版本路由
 路由规则配置：
 ![image.png](./images/route-version.png)
@@ -71,6 +77,7 @@ curl 0:8084/reservations/hi?count=10
 ![image.png](./images/route-version-caller-1.png)
 开启路由规则，调用之后，可以看出所有流量均往v1.container版本去路由了
 ![image.png](./images/route-version-caller-2.png)
+<a name="RjFmH"></a>
 #### 多流量目的地匹配
 ![image.png](./images/route-multi-destnation.png)
 配置20%流量往v2.container版本路由。80%流量往v1.container版本路由，调用后可以看到符合预期结果。
