--- a/go-plugin/doc/2.7.6fault-isolation.md
+++ b/go-plugin/doc/2.7.6fault-isolation.md
@@ -4,10 +4,12 @@
 |-----|----------------------------------| -------- |-----------|
 | 0.1 | [檀少](https://github.com/Tanc010) | 初始版本 | 2022.5.10 |
 
-<a name="LjFmL"></a>
+<a name="FISmA"></a>
 ## 2.7.6 故障隔离
 某个服务故障或者异常时，如果该服务触发熔断会造成整个服务的不可用。而故障隔离能够定位到异常的服务实例，实现实例级别精细化的隔离和摘流，使故障影响的范围更小、更可控。
+<a name="FISmB"></a>
 ### 配置说明
+<a name="FISmC"></a>
 #### 配置故障隔离规则
 
 1. 登录 MS控制台。
@@ -28,6 +30,7 @@
 
 4. 单击 **提交**，然后单击 **确定**。
 4. 在故障隔离规则列表中，将刚刚创建的故障隔离规则的状态改为 **开**。
+<a name="FISmD"></a>
 #### 配置示例
 某应用有 A、B、C 三台服务器，三台服务的状态如下：
 
@@ -44,18 +47,22 @@
 - 最大隔离数量：1
 
 如果 10 秒内有 20 个请求，且异常率 ≥ 20%（异常比例倍数 × 异常比例阈值），会触发故障隔离规则。因为 B 的故障率更高，系统会优先将 B 隔离。此时，若将最大隔离数量调整为 2，则 A、B 均会被剔除。
+<a name="FISmE"></a>
 #### 编辑故障隔离规则
 您可以随时编辑已创建的故障隔离规则，规则提交后实时生效。
 
 1. 在 **故障隔离** 页签，单击目标故障隔离规则右侧的 **编辑**。
 1. 按需求编辑故障隔离规则后，单击 **提交**。
+<a name="FISmF"></a>
 #### 删除故障隔离规则
 您可以删除已创建的故障隔离规则，删除操作会实时生效，请谨慎操作。
 
 1. 在 **故障隔离** 页签，单击目标故障隔离规则右侧的 **删除**。
 1. 单击 **确定**。
-### 2.7.6.3 标准springcloud接入故障隔离能力
+<a name="FISmG"></a>
+### 2.7.6.1 标准springcloud接入故障隔离能力
 ![image.png](./images/fault-isolation-config.png)
+<a name="FISmH"></a>
 #### 客户端故障隔离
 故障隔离规则配置
 ![image.png](./images/fault-isolation-client-config.png)
