--- a/go-plugin/doc/2.7.7governance-key.md
+++ b/go-plugin/doc/2.7.7governance-key.md
@@ -4,8 +4,8 @@
 |-----|----------------------------------| -------- |-----------|
 | 0.1 | [檀少](https://github.com/Tanc010) | 初始版本 | 2022.5.10 |
 
-<a name="LjFmL"></a>
-## 2.7.7 故障隔离
+<a name="GKFmA"></a>
+## 2.7.7 服务治理资源key
 服务治理资源key是服务治理相关功能依赖的关键字段，也是sidecar的系统字段，这写字段对于自定义协议显的尤为重要。以下罗列了服务治理资源key：
 
 | **key** | **含义** | **作用** |
@@ -19,6 +19,7 @@
 | x-mosn-method | 请求函数名字 | 服务治理中关联某个服务下具体的方法 |
 
 对于自定义的协议，需要告诉sidecar如何获取这些key，那么在自定义协议的配置metadata里就需要包含对这些服务治理资源key的声明。
+<a name="GKFmB"></a>
 ### Metadata 配置的模版
 ```json
 {
@@ -55,7 +56,9 @@
 
 ```
 这里声明了包括x-mosn-data-id、x-mosn-method、x-mosn-caller-app、x-mosn-target-app的服务治理资源key。
+<a name="GKFmC"></a>
 ### 服务治理拆分
+<a name="GKFmD"></a>
 #### 服务限流相关的资源key
 | key | 功能 |
 | --- | --- |
@@ -68,6 +71,7 @@
 这些资源key对应的配置如下：
 ![image.png](./images/governance-key-ratelimit.png)
 ![image.png](./images/governance-key-match.png)
+<a name="GKFmE"></a>
 #### 服务路由相关的资源key
 | key | 功能 |
 | --- | --- |
@@ -77,6 +81,7 @@
 | x-mosn-caller-ip | 流量精确匹配-系统字段-调用方 IP |
 ![image.png](./images/governance-key-route.png)
 ![image.png](./images/governance-key-match.png)
+<a name="GKFmF"></a>
 #### 服务熔断相关的资源key
 | key | 功能 |
 | --- | --- |
@@ -89,11 +94,12 @@
 这些资源key对应的配置如下：
 ![image.png](./images/governance-key-fusing.png)
 ![image.png](./images/governance-key-match.png)
+<a name="GKFmG"></a>
 #### 服务降级相关的资源key
 | key | 功能 |
 | --- | --- |
 | x-mosn-method | 降级请求的方法 |
-
+<a name="GKFmH"></a>
 #### 故障注入相关的资源key
 | key | 功能 |
 | --- | --- |
@@ -106,6 +112,7 @@
 这些资源key对应的配置如下：
 ![image.png](./images/governance-key-fault-inject.png)
 ![image.png](./images/governance-key-match.png)
+<a name="GKFmI"></a>
 #### 故障隔离相关的资源key
 | key | 功能(客户端功能) |
 | --- | --- |
