fix: modify word err

--- a/go-plugin/doc/2.6.3xml2springcloud.md
+++ b/go-plugin/doc/2.6.3xml2springcloud.md
@@ -89,7 +89,7 @@ egress_config.json 配置如下：
         "dst_protocol": "springcloud"
     },
     "matcher_config": {
-        "matcher_type": "mulit_matcher",
+        "matcher_type": "multiple_matcher",
         "config": {
             "name": "xr2springcloud",
             "enable": true,
