--- a/go-plugin/doc/2.6transcoder.md
+++ b/go-plugin/doc/2.6transcoder.md
@@ -57,7 +57,7 @@
 		"dst_protocol": "<dst_protocol>" //目标协议，即协议转换后的协议 eg:springcloud
 	},
 	"matcher_config": { //协议转换匹配规则。只有匹配改规则的流量才做dubbo到springcloud的转换
-		"matcher_type": "<matcher_type>", //匹配器类型，用来处理匹配规则 eg:商业版仅支持mulit_matcher
+		"matcher_type": "<matcher_type>", //匹配器类型，用来处理匹配规则 eg:商业版仅支持 multiple_matcher
 		"config": {
 			"name": "<pluginType>", //匹配规则名称，同协议转换type名称 eg:dubbo2springcloud
 			"variables": [{
