--- a/go-plugin/doc/2.6.2bolt2springcloud.md
+++ b/go-plugin/doc/2.6.2bolt2springcloud.md
@@ -59,7 +59,7 @@ egress_config.json 配置如下：
         "dst_protocol": "springcloud"
     },
     "matcher_config": {
-        "matcher_type": "mulit_matcher",
+        "matcher_type": "multiple_matcher",
         "config": {
             "name": "bolt2springcloud",
             "enable": true,
