feat: update doc

--- a/go-plugin/doc/api/3.config-api.md
+++ b/go-plugin/doc/api/3.config-api.md
@@ -47,7 +47,7 @@ func GlobalExtendConfigByContext(ctx context.Context, key string) (string, bool)
 
 |  key | value|
 |  ----  | ----  |
-|dynamic_key	|hello world|
+|config|hello world|
 
 ```go
 	conf, ok := config.GlobalExtendConfigByContext(ctx, "config")
