--- a/go-plugin/doc/api/3.config-api.md
+++ b/go-plugin/doc/api/3.config-api.md
@@ -39,7 +39,7 @@ func GlobalExtendConfigByContext(ctx context.Context, key string) (string, bool)
 ![全局配置下发](../images/dynamic_conf.jpg)
 
 ### 3.1.2 实践
-* http协议进行请求头部修改，在拦截器插件中解析动态配置获取 dynamic_key 值，分别在请求和响应头增加字段：
+* http协议进行请求头部修改，在拦截器插件中解析动态配置获取 config 值，分别在请求和响应头增加字段：
   * 请求头部 增加 x-request-proxy: ${value}
   * 响应头部 增加 x-response-proxy: ${value}
   
@@ -50,8 +50,9 @@ func GlobalExtendConfigByContext(ctx context.Context, key string) (string, bool)
 |config|hello world|
 
 ```go
-	conf, ok := config.GlobalExtendConfigByContext(ctx, "config")
-	log.DefaultContextLogger.Infof(ctx, "get dynamic conf:%s ok:%s", conf, ok)
+    conf, ok := config.GlobalExtendConfigByContext(ctx, "config")
+    log.DefaultContextLogger.Infof(ctx, "get dynamic conf:%s ok:%s", conf, ok)
+    header.Set(key,conf)
 ```
 * 插件打包
 ```shell
@@ -73,7 +74,7 @@ grep 'get dynamic conf' /home/admin/logs/mosn/default.log
 ### 3.1.3 FAQ
 * 配置下发成功
 ```go
-	log.DefaultLogger.Infof("[xprotocol] [config] receive dataId:%s value:%s content:%v", dataId, value, ec.content)
+    log.DefaultLogger.Infof("[xprotocol] [config] receive dataId:%s value:%s content:%v", dataId, value, ec.content)
 ```
 * 配置解析失败
 ```go
