feat: update config api

--- a/go-plugin/doc/api/3.config-api.md
+++ b/go-plugin/doc/api/3.config-api.md
@@ -38,7 +38,7 @@ func GlobalExtendConfigByContext(ctx context.Context, key string) (string, bool)
 选择对应的 appname, 填写对应的 key 值 即可完成下发。
 ![全局配置下发](../images/dynamic_conf.jpg)
 
-### 3.1.2 实践
+### [3.1.2 实践](../../plugins/stream_filters/dynamic_conf)
 * http协议进行请求头部修改，在拦截器插件中解析动态配置获取 config 值，分别在请求和响应头增加字段：
   * 请求头部 增加 x-request-proxy: ${value}
   * 响应头部 增加 x-response-proxy: ${value}
