feat: update config-api (#121)
* feat: update config-api

* feat: update doc

* docs: update doc

* feat: update config api

Co-authored-by: wanghongjia.whj <wanghongjia.whj@antgroup.com>

--- a/go-plugin/doc/api/3.config-api.md
+++ b/go-plugin/doc/api/3.config-api.md
@@ -4,13 +4,13 @@
 |-----| ---- |-------|----------|
 | 0.1 | [省善](https://github.com/YIDWang) | 初始版本 | 2022.4.10 |
 
-# 3. config api介绍
+# 3. 动态配置
 开源 mosn 配置实现主要通过两种渠道：服务启动配置文件，机器环境变量，目前可以满足大多数场景。有些场景下，业务期望进程不重启的情况下，配置动态变更，因此插件支持了动态配置感知功能并基于封装API。目前已经支持全局配置变更，未来会支持更多功能。
 
-## 3.1 全局配置 api
+## 3.1 全局配置 
 目前提供了两个 API 函数供开发使用，鉴于全局配置众多因此是通过 key:value 保存在 map 中，以 key 为最小纬度管理。
 
-### 3.1 api 函数介绍
+### 3.1.1 API 使用指南
 * GlobalExtendMapByContext : 从 ctx 中获取全局全部配置 map 对象。
 * GlobalExtendConfigByContext : 通过 ctx 和 key 获取全局配置中的某个 value 数据。 
 
@@ -34,17 +34,26 @@ func GlobalExtendConfigByContext(ctx context.Context, key string) (string, bool)
 }
 ```
 
-### 3.1.2 服务控制台介绍
-* 配置下发
+#### 服务控制台---配置下发
+选择对应的 appname, 填写对应的 key 值 即可完成下发。
 ![全局配置下发](../images/dynamic_conf.jpg)
 
-### 3.1.3 配置使用
-在拦截器插件 dynamic_conf 中增加下面两行代码
+### [3.1.2 实践](../../plugins/stream_filters/dynamic_conf)
+* http协议进行请求头部修改，在拦截器插件中解析动态配置获取 config 值，分别在请求和响应头增加字段：
+  * 请求头部 增加 x-request-proxy: ${value}
+  * 响应头部 增加 x-response-proxy: ${value}
+  
+控制台下发配置如下：
+
+|  key | value|
+|  ----  | ----  |
+|config|hello world|
+
 ```go
-	conf, ok := config.GlobalExtendConfigByContext(ctx, "config")
-	log.DefaultContextLogger.Infof(ctx, "get dynamic conf:%s ok:%s", conf, ok)
+    conf, ok := config.GlobalExtendConfigByContext(ctx, "config")
+    log.DefaultContextLogger.Infof(ctx, "get dynamic conf:%s ok:%s", conf, ok)
+    header.Set(key,conf)
 ```
-### 3.1.4 实践
 * 插件打包
 ```shell
 make filter plugin=dynamic_conf
@@ -62,10 +71,10 @@ grep 'get dynamic conf' /home/admin/logs/mosn/default.log
 ```
 ![查看日志](../images/dynamic_conf_result.jpg)
 
-### 3.1.5 FAQ
+### 3.1.3 FAQ
 * 配置下发成功
 ```go
-	log.DefaultLogger.Infof("[xprotocol] [config] receive dataId:%s value:%s content:%v", dataId, value, ec.content)
+    log.DefaultLogger.Infof("[xprotocol] [config] receive dataId:%s value:%s content:%v", dataId, value, ec.content)
 ```
 * 配置解析失败
 ```go
